fix: display pg padding same all around on mobile

--- a/components/home/home.module.scss
+++ b/components/home/home.module.scss
@@ -38,6 +38,7 @@
 
   @media (max-width: 700px) {
     flex-direction: column;
+    padding: 24px;
 
     .left {
       margin-right: 0;
