--- a/components/user/display.module.scss
+++ b/components/user/display.module.scss
@@ -17,6 +17,7 @@
 
   @media (max-width: $cutoff) {
     flex-direction: column;
+    padding: 24px;
   }
 
   .left {
